# dpf-nanovg-widgets-examples

./: .gitmodules  CMakeLists.txt  DistrhoPluginInfo.h  NanovgWidgetsExamplePlugin.cpp  NanovgWidgetsExampleUI.cpp  README.md
widgets/: Button.hpp  Knob.hpp  Slider.hpp  Spinner.hpp  Switch.hpp
widgets/src/: Button.cpp  Knob.cpp  Slider.cpp  Spinner.cpp  Switch.cpp
